cmake_minimum_required(VERSION 3.0)

PROJECT(ONE-NODE)

STRING(TOLOWER ${CMAKE_BUILD_TYPE} ENGINE_BUILD_TYPE)

SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -Wall -D_DEBUG -std=c++11")
SET(CMAKE_CXX_FLAGS_RELEASE "-O0 -g -Wall -std=c++11")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/3rd/lua/src)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/bin-${ENGINE_BUILD_TYPE})

ADD_SUBDIRECTORY(engine-src)
ADD_SUBDIRECTORY(3rd/lua/src)
